# neuralODE

./: README.md  density_estimate.py  environment.yml  main.cpp  mlp1_jac.ptc  model.py  requirements.txt  sample_MLP.ipynb  train_AE.py  utils.py
data/: sample_new_dd0053_chemistry_1.hdf5  sample_new_dd0053_chemistry_2.hdf5  sample_new_dd0053_chemistry_3.hdf5  sample_new_dd0053_chemistry_4.hdf5  sample_new_dd0053_chemistry_5.hdf5
neuralODE/: _model.py  _train.py  autoencoder.py  dataloader.py  model.py  train.py  utils.py
torchODEcpp/: CMakeLists.txt  sample.cpp  sample.h
torchODEcpp/example_torchscripts/: decoder_module.pt  encoder_module.pt  epoch=231-val_loss=0.01186.ckpt  jac_module.pt  rhs_module.pt
torchODEcpp/src/CvodeSolver/: CMakeLists.txt  latent_cvode_solver.cpp  latent_cvode_solver.h
torchODEcpp/src/EncoderDecoder/: CMakeLists.txt  torch_EncoderDecoder.cpp  torch_EncoderDecoder.h
torchODEcpp/src/GrackleSolver/: GRACKLE_INFO  GrackleSolver.cpp  Makefile  Table__OMP_Performance  cxx_omp_example.C
torchODEcpp/src/ReadIO/: CMakeCache.txt  CMakeLists.txt  read_hdf5.cpp  read_hdf5.h
train_script/: _train_collate.py  train_batch.py  train_batchtime.py  weighted_normed_ICAE.pbs  weighted_normed_onelayer.pbs  weighted_normed_plain.pbs
